--- a/src/Components/test/testassets/TestServer/Pages/ComponentWithParameters.cshtml
+++ b/src/Components/test/testassets/TestServer/Pages/ComponentWithParameters.cshtml
@@ -2,10 +2,10 @@
 
 <component type="typeof(ComponentWithParameters)"
            render-mode="ServerPrerendered"
-           parameter-Param1="ComponentWithParameters.TestModelValues"
-           parameter-Param2="ComponentWithParameters.DerivedModelValue"
-           parameter-key1="QueryValue"
-           parameter-key2="43" />
+           param-Param1="ComponentWithParameters.TestModelValues"
+           param-Param2="ComponentWithParameters.DerivedModelValue"
+           param-key1="QueryValue"
+           param-key2="43" />
 
 @*
     So that E2E tests can make assertions about both the prerendered and
