--- a/src/Components/test/testassets/TestServer/Pages/MultipleComponents.cshtml
+++ b/src/Components/test/testassets/TestServer/Pages/MultipleComponents.cshtml
@@ -12,7 +12,7 @@
     <div id="test-container">
         <component type="typeof(GreeterComponent)" render-mode="ServerPrerendered" />
         <component type="typeof(GreeterComponent)" render-mode="Server" />
-        <component type="typeof(GreeterComponent)" render-mode="Static" parameter-name='"John"' />
+        <component type="typeof(GreeterComponent)" render-mode="Static" param-name='"John"' />
         <component type="typeof(GreeterComponent)" render-mode="Server"/>
         <div id="container">
             <p>Some content before</p>
@@ -28,8 +28,8 @@
             </div>
         </div>
         <div id="container">
-            <component type="typeof(GreeterComponent)" render-mode="Server" parameter-name='"Albert"' />
-            <component type="typeof(GreeterComponent)" render-mode="ServerPrerendered" parameter-name='"Abraham"' />
+            <component type="typeof(GreeterComponent)" render-mode="Server" param-name='"Albert"' />
+            <component type="typeof(GreeterComponent)" render-mode="ServerPrerendered" param-name='"Abraham"' />
         </div>
     </div>
 
